Adapt to changes in CLinker API in JDK21.